
version 5.8 (2016-04-21)
    * Adds support for custom OAuth 2.0 authorization request parameters.
    * Adds support for custom OpenID Connect authentication request parameters.

version 5.8.1 (2016-04-28)
    * Removes direct dependencies on commons-lang:commons-lang:2.6 (issue
      #179).

version 5.8.2 (2016-05-24)
    * ServletUtils.createHTTPRequest recreates HTTP request body on
      Content-Type application/x-www-form-urlencoded if stripped by the servlet
      container (issue #184).

version 5.9 (2016-05-26)
    * Modifies the Secret class to permit empty values (empty passwords allowed
      by the HTTP basic authentication specification, see RFC 2617, section 2)
      (issue #182).
    * Switches to an alternative JCIP annotation dependency under the Apache
      License, version 2.0. The original JCIP annotation package has a Creative
      Commons which is not recommended for licensing software, see
      https://creativecommons.org/faq/ .
    * Adds Maven profile for building a Java 1.6 compatible JAR package (issue
      #183).

version 5.9.1 (2016-05-27)
    * Refactors ServletUtils.createHTTPRequest for HTTP POST and PUT requests
      with Content-Type application/x-www-form-urlencoded to construct the
      HTTPRequest entity body from ServletRequest.getParameterMap() (issue
      #186).

version 5.10 (2016-05-29)
    * Refactors the sector and pairwise subject identifier framework. Adds new
      SectorID class. Adds new AES/CBC/PKCS5Padding based encoder / decoder of
      pairwise subject identifiers.
    * Adds https schema and host checks to the OIDCClientMetadata
      sector_identifier_uri setter.
    * Adds new OIDCClientMetadata.resolveSectorID method.
    * Adds URI fragment check to ClientMetadata redirect_uri setters (issue
      #188).
    * Includes appropriate registration error on ParseExceptions thrown by
      ClientMetadata.parse and OIDCClientMetadata.parse to aid server-side
      error reporting.

